# Zenith

./: .gitignore  CMakeLists.txt  Makefile  TODO.md  run_tests.sh  specification.md
lib/: CMakeLists.txt
lib/include/zenith/: ints.h  lexer.h  print.h  result.h  stack_queue.h  token.h
lib/src/: lexer.cpp  print.cpp
lib/tests/: CMakeLists.txt
lib/tests/mctest/: CMakeLists.txt
lib/tests/mctest/include/mctest/: mctest.h
lib/tests/mctest/src/: mctest.cpp
lib/tests/unit/: lexer.cpp
src/: build.cpp  build.h  ints.h  lexer.cpp  lexer.h  main.c  main.cpp  parser.cpp  parser.h  print.cpp  print.h  result.h  token.h
src/util/: assembler.c  assembler.h  assembler_table.h  assembler_table.x  byte_builder.c  byte_builder.h  common.h  debug.h  elf.c  elf.h  io.c
tests/: syntax.zn
